music-app (2.2ubuntu2) UNRELEASED; urgency=medium

  [ Bartosz Kosiorek ]
  *  Reduce size of images (with tinypng.com) to decrease click size and improve performance

 -- Bartosz Kosiorek <gang65@poczta.onet.pl>  Tue, 08 Sep 2015 10:08:49 +0200

music-app (2.2ubuntu1) vivid; urgency=medium

  [ Victor Thompson ]
  * Fix SongsView album art for albums and genres (LP: #1477366)
  * Fix to allow the LibraryEmptyState to work again (LP: #1478162)
  * Fix typo in README.autopilot and clarify the instructions
  * Show all README files in QtCreator
  * Force playlist tracks to sync (LP: #1483962)
  * Allow arrow keys to control the initial walkthrough (LP: #1482760)
  * Always fit the cover art to vertically fill the BlurredBackground

  [ Andrew Hayzen ]
  * Fix for console errors when using the parent changed helpers
  * Add support for a content-hub source in both single and multiple selection modes (LP: #1357324)

 -- Andrew Hayzen <ahayzen@gmail.com>  Sat, 05 Sep 2015 00:04:24 +0100

music-app (2.2) vivid; urgency=medium
  [ Andrew Hayzen ]
  * Bump framework to 15.04
  
 -- Andrew Hayzen <ahayzen@gmail.com>  Sat, 27 Jun 2015 21:30:23 +0100

music-app (2.1) vivid; urgency=medium

  [ Andrew Hayzen ]
  * Fixes and add preloading compatibility to ColumnFlow.qml.
  * Only autoset the source due to queue count changes when the queue worker has completed.
  * Improve the way the currentIndex is restored so that there is less/no delay.
  * Delay urlhandler/content-hub calls until after walkthrough is complete. Fixes: https://bugs.launchpad.net/bugs/1438317.
  * Make SongsView and ArtistView adaptive. Fixes: https://bugs.launchpad.net/bugs/1436771.
  * Ensure dialogs are closed before popping a page. Fixes: https://bugs.launchpad.net/bugs/1435658.
  * Split content-hub, uri-handler and metrics into Helpers.
  * Split the NowPlaying page into NowPlaying, Queue and NowPlayingToolbar
  * Destroy dialog before popping page. Fixes: https://bugs.launchpad.net/bugs/1428450.