@@ -3,6 +3,9 @@ music-app (2.2ubuntu2) UNRELEASED; urgency=medium
   [ Bartosz Kosiorek ]
   *  Reduce size of images (with tinypng.com) to decrease click size and improve performance
 
+  [ Victor Thompson ]
+  * Remove some deprecated code for the UbuntuShape image property.
+
  -- Bartosz Kosiorek <gang65@poczta.onet.pl>  Tue, 08 Sep 2015 10:08:49 +0200
 
 music-app (2.2ubuntu1) vivid; urgency=medium
